Update existing files

--- a/blog.html
+++ b/blog.html
@@ -4,16 +4,229 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <!-- Font Awesome for social media icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" href="blog.html">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">The Digital Diary</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="blog.html">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Categories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!--Main Banner
+  <div id="mainBanner" class="jumbotron jumbotron-fluid text-center" style="background-image: url('desktop.jpg'); background-size: cover; background-position: center; color: white;">
+    <div class="container" style="background-color: rgba(0, 0, 0, 0.5); padding: 20px; border-radius: 10px;">
+      <div class="container my-5">
+        <form class="form-inline justify-content-center">
+          <input type="text" class="form-control mb-2 mr-sm-2" placeholder="Enter blog name or keywords" size="100">
+          <button type="submit" class="btn btn-outline-primary mb-2">Search</button>
+        </form>
+      </div>
+    </div>
+  </div>  -->
+
+  
+  <div class="container my-5">
+    <h2 class="text-lg-start mb-4">Blog Posts</h2>
+    <div class="row mb-5">
+      <div class="col-md-12">
+        <h2>Welcome to The Digital Diary</h2>
+        <p>Explore our curated selection of articles, guides, and insights from the digital world. Whether you're a tech enthusiast, a professional in the field, or just curious about the latest trends, our blog offers something for everyone.</p>
+      </div>
+    </div>
+    <h2 class="text-center mb-4">Latest Posts</h2>
+
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="finger-print-network-cyber-security-background-vector.jpg" class="card-img-top" alt="Post 1" height="200">
+            <div class="card-body">
+              <h5 class="card-title">Zero-Day Vulnerabilities: A Growing Concern for Cybersecurity in 2024</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="cybersecurity_degrees_6720dc664.jpg" class="card-img-top" alt="Post 2" height="200">
+            <div class="card-body">
+              <h5 class="card-title">The Impact of AI on Cybersecurity: Opportunities and Threats in 2024</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="360_F_430284430_vrUJPmnwGmtAfEb2OUj3xSe06lwnMCh7.jpg" class="card-img-top" alt="Post 3" height="200">
+            <div class="card-body">
+              <h5 class="card-title">Best Practices for Small Businesses to Combat Cybersecurity Threats</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="finger-print-network-cyber-security-background-vector.jpg" class="card-img-top" alt="Post 1" height="200">
+            <div class="card-body">
+              <h5 class="card-title">Zero-Day Vulnerabilities: A Growing Concern for Cybersecurity in 2024</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="cybersecurity_degrees_6720dc664.jpg" class="card-img-top" alt="Post 2" height="200">
+            <div class="card-body">
+              <h5 class="card-title">The Impact of AI on Cybersecurity: Opportunities and Threats in 2024</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="360_F_430284430_vrUJPmnwGmtAfEb2OUj3xSe06lwnMCh7.jpg" class="card-img-top" alt="Post 3" height="200">
+            <div class="card-body">
+              <h5 class="card-title">Best Practices for Small Businesses to Combat Cybersecurity Threats</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="finger-print-network-cyber-security-background-vector.jpg" class="card-img-top" alt="Post 1" height="200">
+            <div class="card-body">
+              <h5 class="card-title">Zero-Day Vulnerabilities: A Growing Concern for Cybersecurity in 2024</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="cybersecurity_degrees_6720dc664.jpg" class="card-img-top" alt="Post 2" height="200">
+            <div class="card-body">
+              <h5 class="card-title">The Impact of AI on Cybersecurity: Opportunities and Threats in 2024</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4">
+            <img src="360_F_430284430_vrUJPmnwGmtAfEb2OUj3xSe06lwnMCh7.jpg" class="card-img-top" alt="Post 3" height="200">
+            <div class="card-body">
+              <h5 class="card-title">Best Practices for Small Businesses to Combat Cybersecurity Threats</h5>
+              <p class="card-text">Brief description of the post...</p>
+              <a href="#" class="btn btn-outline-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+  <footer class="jumbotron jumbotron-fluid text-center text-lg-start">
+    <div class="container p-4">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+          <h5 class="text-uppercase">The Digital Diary</h5>
+          <p>
+            Stay updated with the latest trends in the digital world. Follow us on social media and subscribe to our newsletter for more updates.
+          </p>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Quick Links</h5>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#" class="text-dark">Home</a>
+            </li>
+            <li>
+              <a href="#" class="text-dark">About</a>
+            </li>
+            <li>
+              <a href="#" class="text-dark">Blog</a>
+            </li>
+            <li>
+              <a href="#" class="text-dark">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Follow Us</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#" class="text-dark"><i class="fab fa-facebook-f mr-2"></i> Facebook</a>
+            </li>
+            <li>
+              <a href="#" class="text-dark"><i class="fab fa-twitter mr-2"></i> Twitter</a>
+            </li>
+            <li>
+              <a href="#" class="text-dark"><i class="fab fa-instagram mr-2"></i> Instagram</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="text-center p-3">
+      © 2024 The Digital Diary. All rights reserved.
+    </div>
+  </footer>
 
 
-    <!-- Font Awesome for social media icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
 </html>
