--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Digital Diary</title>
-
+   <!-- Font Awesome for social media icons -->
+   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="about.html">
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +32,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="blog.html">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Categories</a>
@@ -66,7 +67,7 @@
   </div>-->
 
   <!-- Main Banner -->
-<div id="mainBanner" class="jumbotron jumbotron-fluid text-center" style="background-image: url('Web-design.jpg'); background-size: cover; background-position: center; color: white;">
+  <div id="mainBanner" class="jumbotron jumbotron-fluid text-center" style="background-image: url('desktop.jpg'); background-size: cover; background-position: center; color: white;">
     <div class="container" style="background-color: rgba(0, 0, 0, 0.5); padding: 20px; border-radius: 10px;">
       <h1 class="display-4">Welcome to The Digital Diary</h1>
       <p class="lead">Your go-to blog for the latest in digital trends and insights.</p>
@@ -181,7 +182,7 @@
         </form>
       </div>
       <!-- Footer -->
-<footer class="jumbotron jumbotron-fluid text-center text-lg-start">
+    <footer class="jumbotron jumbotron-fluid text-center text-lg-start">
     <div class="container p-4">
       <div class="row">
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
@@ -229,7 +230,6 @@
   </footer>
 
 
-  <!-- Font Awesome for social media icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+ 
 </body>
 </html>
