--- a/blog.html
+++ b/blog.html
@@ -30,27 +30,16 @@
           <a class="nav-link" href="blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Categories</a>
+          <a class="nav-link" href="publish.html">Publish</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
-        </li>
-      </ul>
     </div>
   </nav>
   <!--Main Banner
@@ -180,52 +169,52 @@
     </div>
 
     <!-- Footer -->
-  <footer class="jumbotron jumbotron-fluid text-center text-lg-start">
-    <div class="container p-4">
-      <div class="row">
-        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase">The Digital Diary</h5>
-          <p>
-            Stay updated with the latest trends in the digital world. Follow us on social media and subscribe to our newsletter for more updates.
-          </p>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Quick Links</h5>
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#" class="text-dark">Home</a>
-            </li>
-            <li>
-              <a href="#" class="text-dark">About</a>
-            </li>
-            <li>
-              <a href="#" class="text-dark">Blog</a>
-            </li>
-            <li>
-              <a href="#" class="text-dark">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Follow Us</h5>
-          <ul class="list-unstyled">
-            <li>
-              <a href="#" class="text-dark"><i class="fab fa-facebook-f mr-2"></i> Facebook</a>
-            </li>
-            <li>
-              <a href="#" class="text-dark"><i class="fab fa-twitter mr-2"></i> Twitter</a>
-            </li>
-            <li>
-              <a href="#" class="text-dark"><i class="fab fa-instagram mr-2"></i> Instagram</a>
-            </li>
-          </ul>
+    <footer class="jumbotron jumbotron-fluid  text-lg-start">
+      <div class="container p-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">The Digital Diary</h5>
+            <p>
+              Stay updated with the latest trends in the digital world. Follow us on social media and subscribe to our newsletter for more updates.
+            </p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Quick Links</h5>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#" class="text-dark">Home</a>
+              </li>
+              <li>
+                <a href="#" class="text-dark">About</a>
+              </li>
+              <li>
+                <a href="#" class="text-dark">Blog</a>
+              </li>
+              <li>
+                <a href="#" class="text-dark">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Follow Us</h5>
+            <ul class="list-unstyled">
+              <li>  
+                <a href="#" class="text-dark"><i class="fab fa-facebook-f mr-2"></i> Facebook</a>
+              </li>
+              <li>
+                <a href="#" class="text-dark"><i class="fab fa-twitter mr-2"></i> Twitter</a>
+              </li>
+              <li>
+                <a href="#" class="text-dark"><i class="fab fa-instagram mr-2"></i> Instagram</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="text-center p-3">
-      © 2024 The Digital Diary. All rights reserved.
-    </div>
-  </footer>
+      <div class="text-center p-3">
+        © 2024 The Digital Diary. All rights reserved.
+      </div>
+    </footer>
 
 
 </body>
